--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
     <string name="pr_f_rences">Préférences</string>
     <string name="ev_nements">Evènements</string>
     <string name="r_glages">Réglages</string>
+    <string name="ajouter_ma_liste_d_envies">Ajouter à ma liste d\'envies</string>
 </resources>
